--- a/examples/python-web-app/devops/demo/templates/demo_site.html
+++ b/examples/python-web-app/devops/demo/templates/demo_site.html
@@ -73,7 +73,7 @@ footer {
 
 
 <header>
-  <h2>Free DevOps Course By Abhishek</h2>
+  <h2>Kubernetes Challenge Day 6 by Kiran Rathod</h2>
 </header>
 
 <section>
