--- a/examples/python-web-app/devops/demo/templates/demo_site.html
+++ b/examples/python-web-app/devops/demo/templates/demo_site.html
@@ -87,13 +87,13 @@ footer {
   
   <article>
     <h1>Agenda</h1>
-    <p>Learn DevOps with strong foundational knowledge and practical understanding</p>
-    <p>Please Share the Channel with your friends and colleagues</p>
+    <p>Learn Kubernetes with strong foundational knowledge and practical understanding</p>
+    <p>Please Share the Documents if you find it useful</p>
   </article>
 </section>
 
 <footer>
-  <p>@AbhishekVeeramalla</p>
+  <p>@KiranRathod</p>
 </footer>
 
 </body>
